// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keywords should render Keywords: input 1`] = `
Array [
  <div
    className="components-form-token-field"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <label
      className="components-form-token-field__label"
      htmlFor="components-form-token-input-0"
    >
      Set Search Keywords
    </label>
    <div
      className="components-form-token-field__input-container"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
    >
      <span
        className="components-form-token-field__token"
      >
        <span
          className="components-form-token-field__token-text"
          id="components-form-token-field__token-text-0"
        >
          <span
            className="components-visually-hidden"
          >
            test (1 of 1)
          </span>
          <span
            aria-hidden="true"
          >
            test
          </span>
        </span>
        <button
          aria-describedby="components-form-token-field__token-text-0"
          aria-label="Remove item"
          className="components-button components-form-token-field__remove-token has-icon"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            focusable={false}
            height={24}
            role="img"
            viewBox="-2 -2 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
            />
          </svg>
        </button>
      </span>
      <input
        aria-autocomplete="list"
        aria-describedby="components-form-token-suggestions-howto-0"
        aria-expanded={false}
        autoComplete="off"
        className="components-form-token-field__input"
        disabled={false}
        id="components-form-token-input-0"
        onBlur={[Function]}
        onChange={[Function]}
        role="combobox"
        size={0}
        type="text"
        value=""
      />
    </div>
    <p
      className="components-form-token-field__help"
      id="components-form-token-suggestions-howto-0"
    >
      Separate with commas or the Enter key.
    </p>
  </div>,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>
    </div>,
    Array [
      "",
      "",
    ],
  ],
]
`;

exports[`Keywords should render Keywords: render 1`] = `
Array [
  <div
    className="components-form-token-field"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    tabIndex="-1"
  >
    <label
      className="components-form-token-field__label"
      htmlFor="components-form-token-input-0"
    >
      Set Search Keywords
    </label>
    <div
      className="components-form-token-field__input-container"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
    >
      <input
        aria-autocomplete="list"
        aria-describedby="components-form-token-suggestions-howto-0"
        aria-expanded={false}
        autoComplete="off"
        className="components-form-token-field__input"
        disabled={false}
        id="components-form-token-input-0"
        onBlur={[Function]}
        onChange={[Function]}
        role="combobox"
        size={0}
        type="text"
        value=""
      />
    </div>
    <p
      className="components-form-token-field__help"
      id="components-form-token-suggestions-howto-0"
    >
      Separate with commas or the Enter key.
    </p>
  </div>,
  Array [
    <div
      onMouseMove={[Function]}
    >
      <div
        className="block-editor-block-list__layout is-root-container"
        onDragStart={[Function]}
        onFocus={[Function]}
      >
        Array [
          "",
          <div
            className="block-list-appender wp-block"
            onFocus={[Function]}
            tabIndex={-1}
          >
            <div
              className="wp-block block-editor-default-block-appender"
              data-root-client-id=""
            >
              <textarea
                aria-label="Add block"
                className="block-editor-default-block-appender__content"
                onChange={[Function]}
                onFocus={[Function]}
                readOnly={true}
                role="button"
                rows={1}
                value="Start writing or type / to choose a block"
              />
              <div
                className="components-dropdown block-editor-inserter"
              >
                <button
                  aria-expanded={false}
                  aria-haspopup="true"
                  aria-label="Add block"
                  className="components-button block-editor-inserter__toggle has-icon"
                  disabled={false}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  type="button"
                >
                  <svg
                    aria-hidden={true}
                    focusable={false}
                    height={24}
                    role="img"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 11.2h-5.2V6h-1.6v5.2H6v1.6h5.2V18h1.6v-5.2H18z"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>,
        ]
      </div>
    </div>,
    Array [
      "",
      "",
    ],
  ],
]
`;
